--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -70,12 +70,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"¡Hola mundo!\")\n",
+        "15\n",
+        "print(\"Mi nombre es Karla y tengo 31 años y me encanta aprender\")\n",
+        "print(\"Nombre: Karla\")\n",
+        "print(\"Apellido: Juárez\")"
+      ],
       "metadata": {
-        "id": "o7jrX_iKhdkU"
+        "id": "o7jrX_iKhdkU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2922e03b-58fb-4be7-febc-ddaae0ca3b1e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¡Hola mundo!\n",
+            "Mi nombre es Karla y tengo 31 años y me encanta aprender\n",
+            "Nombre: Karla\n",
+            "Apellido: Juárez\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
